Opera bugfix: source selector has proper z-index.

--- a/views/style_panel.sass
+++ b/views/style_panel.sass
@@ -40,6 +40,10 @@ body
   #query input
     font-family: "Helvetica", "Arial", sans-serif
 
+// Opera z-index bugfix
+#menu-wrapper, #search, #filter
+  z-index: 999999
+
 #filter
   font-size: 0.8em
   //  position: relative
